--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       rel="stylesheet"
     />
     <!--3-ссылка на таблицы стилей в даном проекте-->
-    <link rel="stylesheet" href="./css/styles.css" />
+	 <link rel="stylesheet" href="./css/styles.css" />
+	 <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
